--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
   }
 }
